syntax = "proto3";

package vaas.provider.v1;

option go_package = "github.com/allinbits/vaas/x/vaas/provider/types";

import "gogoproto/gogo.proto";
import "vaas/v1/shared_consumer.proto";
import "vaas/v1/wire.proto";
import "vaas/provider/v1/provider.proto";

// GenesisState defines the VAAS provider chain genesis state
message GenesisState {
  // strictly positive and set to 1 (DefaultValsetUpdateID) for a new chain
  uint64 valset_update_id = 1;
  // empty for a new chain
  repeated ConsumerState consumer_states = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"consumer_states\""
  ];
  // empty for a new chain
  repeated ValsetUpdateIdToHeight valset_update_id_to_height = 3
      [ (gogoproto.nullable) = false ];
  Params params = 4 [ (gogoproto.nullable) = false ];
  // empty for a new chain
  repeated ValidatorConsumerPubKey validator_consumer_pubkeys = 5
      [ (gogoproto.nullable) = false ];
  // empty for a new chain
  repeated ValidatorByConsumerAddr validators_by_consumer_addr = 6
      [ (gogoproto.nullable) = false ];

  // empty for a new chain
  repeated ConsumerAddrsToPruneV2 consumer_addrs_to_prune_v2 = 7
      [ (gogoproto.nullable) = false ];
}

// The provider VAAS module's knowledge of consumer state.
//
// Note this type is only used internally to the provider VAAS module.
// IBC v2 Note: In IBC v2 (Eureka), channel_id will be removed and only
// client_id will be used for routing. The channel_id field is kept for
// backward compatibility during the migration period.
message ConsumerState {
  // ChainID defines the chain ID for the consumer chain
  string chain_id = 1;
  // ChannelID defines the IBC channel ID for the consumer chain
  // Deprecated: In IBC v2 (Eureka), channels are not used. Use client_id instead.
  string channel_id = 2;
  // ClientID defines the IBC client ID for the consumer chain
  // IBC v2 Note: This is the primary identifier for routing in IBC v2.
  string client_id = 3;
  // InitalHeight defines the initial block height for the consumer chain
  uint64 initial_height = 4;
  // ConsumerGenesis defines the initial consumer chain genesis states
  vaas.v1.ConsumerGenesisState consumer_genesis = 5
      [ (gogoproto.nullable) = false ];
  // PendingValsetChanges defines the pending validator set changes for the
  // consumer chain
  repeated vaas.v1.ValidatorSetChangePacketData
      pending_valset_changes = 6 [ (gogoproto.nullable) = false ];
  repeated string slash_downtime_ack = 7;
  // the phase of the consumer chain
  ConsumerPhase phase = 8;
}

// ValsetUpdateIdToHeight defines the genesis information for the mapping
// of each valset update id to a block height
message ValsetUpdateIdToHeight {
  uint64 valset_update_id = 1;
  uint64 height = 2;
}
