syntax = "proto3";
package vaas.provider.v1;

option go_package = "github.com/allinbits/vaas/x/vaas/provider/types";

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "vaas/provider/v1/provider.proto";
import "vaas/v1/shared_consumer.proto";
import "vaas/v1/wire.proto";
import "tendermint/crypto/keys.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

service Query {
  // ConsumerGenesis queries the genesis state needed to start a consumer chain
  // whose proposal has been accepted
  rpc QueryConsumerGenesis(QueryConsumerGenesisRequest)
      returns (QueryConsumerGenesisResponse) {
    option (google.api.http) = {
      get: "/vaas/provider/consumer_genesis/{consumer_id}";
    };
  }

  // ConsumerChains queries active consumer chains supported by the provider
  // chain
  rpc QueryConsumerChains(QueryConsumerChainsRequest)
      returns (QueryConsumerChainsResponse) {
    option (google.api.http).get =
        "/vaas/provider/consumer_chains/{phase}";
  }

  // QueryValidatorConsumerAddr queries the address
  // assigned by a validator for a consumer chain.
  rpc QueryValidatorConsumerAddr(QueryValidatorConsumerAddrRequest)
      returns (QueryValidatorConsumerAddrResponse) {
    option (google.api.http).get =
        "/vaas/provider/validator_consumer_addr/{consumer_id}/{provider_address}";
  }

  // QueryProviderAddr returns the provider chain validator
  // given a consumer chain validator address
  rpc QueryValidatorProviderAddr(QueryValidatorProviderAddrRequest)
      returns (QueryValidatorProviderAddrResponse) {
    option (google.api.http).get =
        "/vaas/provider/validator_provider_addr/{consumer_id}/{consumer_address}";
  }

  // QueryAllPairsValConsAddrByConsumer returns a list of pair valconsensus address
  // between provider and consumer chain
  rpc QueryAllPairsValConsAddrByConsumer (
    QueryAllPairsValConsAddrByConsumerRequest)
    returns (QueryAllPairsValConsAddrByConsumerResponse) {
    option (google.api.http) = {
      get: "/vaas/provider/address_pairs/{consumer_id}";
    };
    }

  // QueryParams returns all current values of provider parameters
  rpc QueryParams(QueryParamsRequest)
    returns (QueryParamsResponse) {
      option (google.api.http).get =
    "/vaas/provider/params";
    }

  // QueryConsumerValidators returns the latest set consumer-validator set for a given consumer ID
  // Note that this does not necessarily mean that the consumer chain is using this validator set at this exact moment
  // because a VSCPacket could be delayed to be delivered on the consumer chain.
  rpc QueryConsumerValidators(QueryConsumerValidatorsRequest)
      returns (QueryConsumerValidatorsResponse) {
    option (google.api.http) = {
        get: "/vaas/provider/consumer_validators/{consumer_id}";
    };
  }

  // QueryBlocksUntilNextEpoch returns the number of blocks until the next epoch
  // starts and validator updates are sent to the consumer chains
  rpc QueryBlocksUntilNextEpoch(QueryBlocksUntilNextEpochRequest)
      returns (QueryBlocksUntilNextEpochResponse) {
        option (google.api.http).get =
            "/vaas/provider/blocks_until_next_epoch";
  }

  // QueryConsumerIdFromClientId returns the consumer id of the chain
  // associated with the provided client id
  rpc QueryConsumerIdFromClientId(QueryConsumerIdFromClientIdRequest)
      returns (QueryConsumerIdFromClientIdResponse) {
    option (google.api.http).get =
        "/vaas/provider/consumer_id/{client_id}";
  }

  // QueryConsumerChain returns the consumer chain
  // associated with the provided consumer id
  rpc QueryConsumerChain(QueryConsumerChainRequest)
      returns (QueryConsumerChainResponse) {
    option (google.api.http).get =
        "/vaas/provider/consumer_chain/{consumer_id}";
  }

  // QueryConsumerGenesisTime returns the genesis time
  // of the consumer chain associated with the provided consumer id
  rpc QueryConsumerGenesisTime(QueryConsumerGenesisTimeRequest)
      returns (QueryConsumerGenesisTimeResponse) {
    option (google.api.http).get =
        "/vaas/provider/consumer_genesis_time/{consumer_id}";
  }
}

message QueryConsumerGenesisRequest {
  string consumer_id = 1;
}

message QueryConsumerGenesisResponse {
  vaas.v1.ConsumerGenesisState genesis_state = 1
      [ (gogoproto.nullable) = false ];
}

message QueryConsumerChainsRequest {
  // The phase of the consumer chains returned (optional)
  // Registered=1|Initialized=2|Launched=3|Stopped=4|Deleted=5
  ConsumerPhase phase = 1;

  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryConsumerChainsResponse {
  repeated Chain chains = 1;
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message Chain {
  string chain_id = 1;
  string client_id = 2;
  // The phase the consumer chain
  string phase = 3;
  // The metadata of the consumer chain
  ConsumerMetadata metadata = 4  [(gogoproto.nullable) = false ];
  string consumer_id = 5;
  // Infraction parameters for slashing and jailing
  InfractionParameters infraction_parameters = 6;
}

message QueryValidatorConsumerAddrRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  // The consensus address of the validator on the provider chain
  string provider_address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  // The id of the consumer chain
  string consumer_id = 2;
}

message QueryValidatorConsumerAddrResponse {
  // The address of the validator on the consumer chain
  string consumer_address = 1;
}

message QueryValidatorProviderAddrRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  // The consensus address of the validator on the consumer chain
  string consumer_address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  // The id of the consumer chain
  string consumer_id = 2;
}

message QueryValidatorProviderAddrResponse {
  // The address of the validator on the provider chain
  string provider_address = 1;
}

message QueryAllPairsValConsAddrByConsumerRequest {
  // The id of the consumer chain
  string consumer_id = 1;
}

message QueryAllPairsValConsAddrByConsumerResponse {
  repeated PairValConAddrProviderAndConsumer pair_val_con_addr = 1;
}

message PairValConAddrProviderAndConsumer {
  // The consensus address of the validator on the provider chain
  string provider_address = 1 [ (gogoproto.moretags) = "yaml:\"provider_address\"" ];
  // The consensus address of the validator on the consumer chain
  string consumer_address = 2 [ (gogoproto.moretags) = "yaml:\"consumer_address\"" ];
  tendermint.crypto.PublicKey consumer_key = 3;
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryConsumerValidatorsRequest {
  string consumer_id = 1;
}

message QueryConsumerValidatorsValidator {
  // The consensus address of the validator on the provider chain
  string provider_address = 1 [ (gogoproto.moretags) = "yaml:\"address\"" ];
  // The consumer public key of the validator used on the consumer chain
  tendermint.crypto.PublicKey consumer_key = 2;
  // The power of the validator used on the consumer chain
  int64 consumer_power = 3;
  // The rate to charge delegators on the consumer chain, as a fraction
  string consumer_commission_rate = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
    ];
  // The rate to charge delegators on the provider chain, as a fraction
  string provider_commission_rate = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
    ];
  // description defines the description terms for the validator
  cosmos.staking.v1beta1.Description description = 6 [(gogoproto.nullable) = false];
  // provider_operator_address defines the address of the validator's operator
  string provider_operator_address = 7 [(cosmos_proto.scalar) = "cosmos.ValidatorAddressString"];
  // jailed defined whether the validator has been jailed from bonded status or not.
  bool jailed = 8;
  // status is the validator status (bonded/unbonding/unbonded).
  cosmos.staking.v1beta1.BondStatus status = 9;
  // provider_tokens defines the delegated tokens (incl. self-delegation).
  string provider_tokens = 10 [
    (cosmos_proto.scalar)  = "cosmos.Int",
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable)   = false
  ];
  // The power of the validator used on the provider chain
  int64 provider_power = 11;
  // validates_current_epoch defines whether the validator has to validate for the current epoch or not
  bool validates_current_epoch = 12;
}

message QueryConsumerValidatorsResponse {
  repeated QueryConsumerValidatorsValidator validators = 1;
}

message QueryBlocksUntilNextEpochRequest { }

message QueryBlocksUntilNextEpochResponse {
  // The number of blocks until the next epoch starts
  uint64 blocks_until_next_epoch = 1;
}

message QueryConsumerIdFromClientIdRequest {
  // the client id (on the provider) that is tracking the consumer chain
  // the client id can be found from the consumer chain by querying (i.e., `query ccvconsumer provider-info`)
  string client_id = 1;
}

message QueryConsumerIdFromClientIdResponse {
  // the consumer id of the chain associated with this client id
  string consumer_id = 1;
}

message QueryConsumerChainRequest {
  string consumer_id = 1;
}

message QueryConsumerChainResponse {
  string consumer_id = 1;
  string chain_id = 2;
  string owner_address = 3;
  string phase = 4;
  ConsumerMetadata metadata = 5 [ (gogoproto.nullable) = false ];
  ConsumerInitializationParameters init_params = 6;
  InfractionParameters infraction_parameters = 7;

  // corresponds to the id of the client that is created during launch
  string client_id = 8;
}

message QueryConsumerGenesisTimeRequest {
  string consumer_id = 1;
}

message QueryConsumerGenesisTimeResponse {
  google.protobuf.Timestamp genesis_time = 1
  [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
}
